
[package]
name = "curdirmark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "A small utility that tries to create bookmarks from the current work directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

